# MixedIntCollaborativeProfram

./: .gitignore  NN_input_1000_Realizations_L1.csv  NN_solution_1000_Realizations_L1.csv  NN_solution_1000_Realizations_Linf.csv  flake.nix  l1_norm_switch.py  linf_norm_switch.py  lp_file  main.tex  mixed_int_paper.tex  my_preamble.tex  nn_helpers.py  notes_from_meeting.md  notes_on_cbf_barrier_rl.md  pulp_Linf_norm.py  pyproject.toml  wl-copy
.latexmk/aux/: main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.toc  mixed_int_paper.aux  mixed_int_paper.fdb_latexmk  mixed_int_paper.fls  my_preamble.aux
src/mixedintcollaborativeprofram/: main.py
tests/: test_main.py
